# effort_engine_old

./: CMakeLists.txt  DoxyFile  build_run.sh  effort_engine
documentation/html/: Script_8h_source.html  _2home_2kvark_2effort_project_2effort_engine_2source_2headers_2service_2localTime_8h-example.html  _2home_2kvark_2effort_project_2effort_engine_2source_2headers_2service_2log_8h-example.html  annotated.html  classScript-members.html  classScript.html  classeff_1_1LocalTime-members.html  classeff_1_1LocalTime.html  classeff_1_1Log-members.html  classeff_1_1Log.html  classeff_1_1Log_1_1Exception-members.html  classeff_1_1Log_1_1Exception.html  classeff_1_1VulkanManager-members.html  classeff_1_1VulkanManager.html  classeff_1_1VulkanManager_1_1VulkanInstance-members.html  classeff_1_1VulkanManager_1_1VulkanInstance.html  classeff_1_1VulkanManager_1_1VulkanLogicalDevice-members.html  classeff_1_1VulkanManager_1_1VulkanLogicalDevice.html  classeff_1_1VulkanManager_1_1VulkanPhysicalDevice-members.html  classeff_1_1VulkanManager_1_1VulkanPhysicalDevice.html  classeff_1_1VulkanManager_1_1Window-members.html  classeff_1_1VulkanManager_1_1Window.html  classeff_1_1eff__low_1_1Instance.html  classeff_1_1eff__low_1_1LogicalDevice.html  classeff_1_1eff__low_1_1PhysicalDevice.html  classeff_1_1eff__low_1_1QueueFamilyes.html  classeff_1_1eff__low_1_1Surface-members.html  classeff_1_1eff__low_1_1Surface.html  classeff_1_1eff__low_1_1ValidationLayers.html  classeff_1_1eff__low_1_1Window-members.html  classeff_1_1eff__low_1_1Window.html  classes.html  dir_190b707ee6e9293a7a74df8a90acc5b6.html  dir_51f9b25351e9f8b55a9bec9b428d8138.html  dir_5331ef9a2efc91aabe44a5271e8687ee.html  dir_5eb61357c59ba259c5f75b36dd12a056.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ec0137a7e896d0887af594452484aef3.html  examples.html  files.html  (+25 more)
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_8.js  functions_1.js  functions_3.js  namespaces_0.js  searchdata.js
documentation/latex/: _2home_2kvark_2effort_project_2effort_engine_2source_2headers_2service_2localTime_8h-example.tex  _2home_2kvark_2effort_project_2effort_engine_2source_2headers_2service_2log_8h-example.tex  annotated.tex  classScript.tex  classeff_1_1LocalTime.tex  classeff_1_1Log.tex  classeff_1_1Log_1_1Exception.tex  classeff_1_1VulkanManager.tex  classeff_1_1VulkanManager_1_1VulkanInstance.tex  classeff_1_1VulkanManager_1_1VulkanLogicalDevice.tex  classeff_1_1VulkanManager_1_1VulkanPhysicalDevice.tex  classeff_1_1VulkanManager_1_1Window.tex  classeff_1_1eff__low_1_1Instance.tex  classeff_1_1eff__low_1_1LogicalDevice.tex  classeff_1_1eff__low_1_1PhysicalDevice.tex  classeff_1_1eff__low_1_1QueueFamilyes.tex  classeff_1_1eff__low_1_1Surface.tex  classeff_1_1eff__low_1_1ValidationLayers.tex  classeff_1_1eff__low_1_1Window.tex  examples.tex  namespaceeff.tex  namespaceeff_1_1eff__low.tex  namespaces.tex  refman.tex  structeff_1_1VulkanManager_1_1InstanceCreateInfo.tex  structeff_1_1VulkanManager_1_1VulkanLogicalDevice_1_1QueueFamilyes_1_1Queue.tex  structeff_1_1VulkanManager_1_1WindowCreateInfo.tex  structeff_1_1eff__low_1_1Instance_1_1CreateInfo.tex  structeff_1_1eff__low_1_1QueueFamilyes_1_1Queue.tex  structeff_1_1eff__low_1_1Window_1_1CreateInfo.tex
logs/: error.txt  log.txt  log1.txt  new_loging.txt
resource/data/: VulkanSettings.data  VulkanValidationLayers.json
resource/script/: test_script.lua
resource/shader/: MakeFile.shader  compile_shader.sh
source/scr/: app.cpp  main.cpp  main.cpp.none
(+22 files in other folders)
